--- a/src/main.ui
+++ b/src/main.ui
@@ -6,13 +6,19 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>923</width>
-    <height>521</height>
+    <width>830</width>
+    <height>520</height>
    </rect>
   </property>
   <property name="minimumSize">
    <size>
-    <width>500</width>
+    <width>830</width>
+    <height>520</height>
+   </size>
+  </property>
+  <property name="maximumSize">
+   <size>
+    <width>830</width>
     <height>520</height>
    </size>
   </property>
@@ -29,7 +35,7 @@
      <rect>
       <x>10</x>
       <y>10</y>
-      <width>481</width>
+      <width>411</width>
       <height>121</height>
      </rect>
     </property>
@@ -212,7 +218,7 @@
      <rect>
       <x>10</x>
       <y>140</y>
-      <width>481</width>
+      <width>411</width>
       <height>171</height>
      </rect>
     </property>
@@ -419,7 +425,7 @@
      <rect>
       <x>10</x>
       <y>320</y>
-      <width>481</width>
+      <width>411</width>
       <height>141</height>
      </rect>
     </property>
@@ -428,18 +434,34 @@
     </property>
     <layout class="QGridLayout" name="gridLayout_3"/>
    </widget>
-   <widget class="QPlainTextEdit" name="logPlainTextEdit">
+   <widget class="QGroupBox" name="logGroupBox">
     <property name="geometry">
      <rect>
-      <x>500</x>
-      <y>20</y>
-      <width>411</width>
-      <height>441</height>
+      <x>430</x>
+      <y>10</y>
+      <width>381</width>
+      <height>451</height>
      </rect>
     </property>
-    <property name="readOnly">
-     <bool>true</bool>
+    <property name="title">
+     <string>Output</string>
     </property>
+    <layout class="QGridLayout" name="gridLayout">
+     <item row="0" column="0">
+      <widget class="QPlainTextEdit" name="logPlainTextEdit">
+       <property name="readOnly">
+        <bool>true</bool>
+       </property>
+      </widget>
+     </item>
+     <item row="1" column="0">
+      <widget class="QPushButton" name="clearLogPushButton">
+       <property name="text">
+        <string>Clear</string>
+       </property>
+      </widget>
+     </item>
+    </layout>
    </widget>
   </widget>
   <widget class="QMenuBar" name="menuBar">
@@ -447,7 +469,7 @@
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>923</width>
+     <width>830</width>
      <height>21</height>
     </rect>
    </property>
